# fragmentum-helper

./: 404.html  Cargo.toml  fragmentum-helper-8917f915c0b17718940ed78ae390509c7705976f37c8034320a06b0b30a5238287f8d4b5e575dcaa85f743ca1fb97676.js  fragmentum-helper-8917f915c0b17718940ed78ae390509c7705976f37c8034320a06b0b30a5238287f8d4b5e575dcaa85f743ca1fb97676_bg.wasm  fragmentum-helper-de745032629b79a5.js  fragmentum-helper-de745032629b79a5_bg.wasm  index-8e8af0678ebc6c81.css  index.html
.github/workflows/: pages.yml  rust.yml
css/: _aspect_selector.scss  _base.scss  _create_race.scss  _fonts.css  _race_about_template  _race_about_template.scss  index.scss
src/: aspects.rs  detachment.rs  main.rs  resources.rs  state.rs  structures.rs
src/components/: aspect_selector.rs  detachment_view.rs  io_state_settings.rs  mod.rs  nav.rs  structure_selector.rs
src/pages/: create_detachment.rs  create_race.rs  mod.rs  race_about_template.rs  under_construction.rs
