[package]
name = "fragmentum-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
leptos = { version = "0.5.2", features = ["csr"] }
leptos_router = { version = "0.5.2", features = ["csr"] }
serde = "1.0.192"
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
wasm-bindgen-futures = "0.4.38"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  "HtmlInputElement",
  "FileList",
  "File",
  'Window',
]
